--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,17 +41,29 @@
 .classified_specs {
   margin-top: 20px;
   margin-left: 20px;
-  padding: 30px;
+  padding: 10px;
   float: left;
   width: 18%;
-  height: 300px;
+  height: 400px;
   border: 2px;
   border-style: solid;
+  background: rgba(255, 255, 255, .5);
 }
 
 .submit_index {
   height: 40px;
   padding: 0 30px;
+  float: right;
+}
+
+#home_bgi {
+  /*background-image: image-url("riot.jpg");*/
+
+  background-color: gray;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  max-width: 100%;
+  height: 450px;
 }
 
 /*************************
@@ -78,10 +90,16 @@
 }
 
 
+/*************************
+
+    Login page
+
+*************************/
 
 
-
-
+.checkbox {
+  margin-left: 20px 
+}
 
 
 
