--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -44,10 +44,11 @@
   padding: 10px;
   float: left;
   width: 18%;
-  height: 400px;
+  height: 300px;
   border: 2px;
   border-style: solid;
   background: rgba(255, 255, 255, .5);
+  overflow: scroll;
 }
 
 .submit_index {
